--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,26 @@ Cargo.lock
 # Solidity
 /artifacts
 /cache
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
